fix(press): desktop - when the page is too short, make sure footer is at the bottom

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -7,6 +7,7 @@
   --bs-border-style: dashed;
   --bs-body-line-height: 1.4;
   --header-nav-height: 110px;
+  --footer-nav-height: 39px;
 }
 
 body {
@@ -309,6 +310,14 @@ footer a:hover {
     --bs-nav-link-color: var(--bs-body-color);
     --bs-navbar-nav-link-padding-y: 0;
     --bs-nav-link-padding-y: 0;
+  }
+
+  main.container {
+    min-height: calc(100vh - var(--footer-nav-height));
+  }
+
+  footer a {
+    line-height: var(--footer-nav-height);
   }
 
   .clipped,
